[project]
name = "all-masters"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.21.0",
    "aiogram-dialog>=2.4.0",
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "openai>=1.99.6",
    "pillow>=11.3.0",
    "pydantic-settings>=2.10.1",
    "pydentic>=0.0.1.dev3",
    "redis<7",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.41",
    "taskiq>=0.11.20",
    "taskiq-aiogram>=0.3.1",
    "taskiq-redis",
]
